--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -1,10 +1,10 @@
-!!! Strict
-%html(lang="en" xmlns="http://www.w3.org/1999/xhtml")
+!!! 5
+%html(lang="fr")
   %head
-    %meta(http-equiv="content-type" content="text/html; charset=UTF-8")
-    %title #{(title ? title + " - " : "")}How To Node - NodeJS
-    %meta(name="description" content="Learn the zen of coding in NodeJS.")
-    %link(href="/volcano.css?v2" rel="stylesheet")
+    %meta(charset="UTF-8")
+    %title #{(title ? title + " - " : "")}Un geek en orbite
+    %meta(name="description" content="#{(title ? title + " - " : "Un geek en orbite")}")
+    %link(href="/layout.css?v1" rel="stylesheet")
     %link(href="/print.css" rel="stylesheet" media="print")
     %link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/feed.xml")
     %link(href="/favicon.ico" rel="icon" type="image/x-icon")
@@ -13,7 +13,7 @@
       #header
         %a{href: "/"}
           %h1
-            How To Node
+            Un geek en orbite
           %h2.tagline
             The zen of coding in node.JS
       = content
