--- a/skin/index.haml
+++ b/skin/index.haml
@@ -12,6 +12,15 @@
       %a{href: "/" + article.name} Read more...
 
 #sidebar
+  #share
+    #twitter
+      %a{href:"http://twitter.com/share", class:"twitter-share-button", data-count:"vertical", data-via:"PuerkitoBio", data-lang:"fr"}Tweet
+      %script{type:"text/javascript", src:"http://platform.twitter.com/widgets.js"}
+    #linkedin
+      %script{src:"http://platform.linkedin.com/in.js", type:"text/javascript"}
+      %script{type:"IN/Share", data-counter:"top"}
+    #facebook
+      %iframe{src:"http://www.facebook.com/plugins/like.php?href&amp;layout=box_count&amp;show_faces=false&amp;width=58&amp;action=like&amp;font&amp;colorscheme=light&amp;height=65", scrolling:"no", frameborder:"0", style:"border:none; overflow:hidden; width:58px; height:65px;", allowTransparency:"true"}
   .aside
     = markdownEncode(description)
   .bubble
@@ -25,5 +34,4 @@
           :if article.node
             %span.versiontag&= article.node
   .bubble= markdownEncode(description)
-  %a.sponsor{href:"http://mediatemple.net/"}
-    %img{src:"mtbadge.jpg", alt:"(mt) mediatemple", title:"Hosting donated by Media Temple"}
+
