--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -15,12 +15,12 @@
           %h1
             Un geek en orbite
           %h2.tagline
-            The zen of coding in node.JS
+            blogue exploratoire | laboratoire journalis&eacute;
       = content
       
-      #footer.clearfix
-        %p Site Design and code is &copy; 2010 to Tim Caswell under the MIT license. Content and articles are copyrighted to the individual authors. All code snippets used in the examples are in the public domain.
-        %p Wheat running on node #{process.version}
+      #footer
+        %p Code source, design, contenu et articles &copy; 2011 Martin Angers sous la license MIT. Tous les exemples de code utilisés sont du domaine public.
+        %p Wheat s'exécutant sous node #{process.version}
     :script
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
       document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
