--- a/skin/public/layout.css
+++ b/skin/public/layout.css
@@ -15,11 +15,12 @@ body {
     margin: 10px auto;
     width: 80%;
     background-color: #F7F6F5;
+    min-width: 900px;
 }
 
 #header {
 	padding: 10px;
-	background-color: #1a82f7;	
+	background-color: #004276;	
 	/* Firefox 3.6+ */
 	background: -moz-linear-gradient(100% 100% 90deg, #004276, #F4F4F4);
 	/* Safari 4-5, Chrome 1-9 */
@@ -41,27 +42,59 @@ body {
 	margin-top: 2px;
 	padding: 10px;
     float: left;
-    width: 60%;
+    width: 70%;
     -moz-border-top-right-radius: 15px;-webkit-border-top-right-radius: 15px;border-top-right-radius: 15px;
     -moz-border-bottom-left-radius: 15px;-webkit-border-bottom-left-radius: 15px;border-bottom-left-radius: 15px;
     border: 1px solid #D3D3D3;
 }
 
 #sidebar {
+  min-width: 200px;
 	margin-top: 2px;	
+	margin-bottom: 10px;
 	padding: 10px;
     float: right;
-    width: 35%;
+    width: 25%;
     border: 1px solid #004276;
     background-color: #F4F4F4;
     -moz-border-top-left-radius: 15px;-webkit-border-top-left-radius: 15px;border-top-left-radius: 15px;
     -moz-border-bottom-right-radius: 15px;-webkit-border-bottom-right-radius: 15px;border-bottom-right-radius: 15px;
 }
 
+#share {
+  width: 200px;
+  height: 65px;
+}
+
+#twitter {
+    float: left;
+    margin-right: 5px;
+}
+
+#facebook {
+    float: left;
+    margin-right: 5px;
+}
+
+#linkedin {
+    float: right;
+}
+
 #footer {
-    clear: both;
-    margin: 10px auto;
-    width: 80%;
+  clear: both;
+   padding: 10px;
+    background-color: #004276;
+    text-align: center;
+    color: #FFFFFF;
+	background-color: #004276;	
+	/* Firefox 3.6+ */
+	background: -moz-linear-gradient(100% 100% 90deg, #F4F4F4, #004276);
+	/* Safari 4-5, Chrome 1-9 */
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#004276), to(#F4F4F4));
+	/* Safari 5.1+, Chrome 10+ */
+	background: -webkit-linear-gradient(#004276, #F4F4F4);
+	/* Opera 11.10+ */
+	background: -o-linear-gradient(#004276, #F4F4F4);
 }
 
 
