--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -15,7 +15,7 @@
           %h1
             Un geek en orbite
           %h2.tagline
-            blogue exploratoire | laboratoire journalis&eacute;
+            blogue_exploratoire | laboratoire_journalis&eacute;;
       = content
       
       #footer
