--- a/skin/article.haml
+++ b/skin/article.haml
@@ -5,27 +5,6 @@
     %a{href: "/" + article.name}&= article.title
   = markdownEncode(article.markdown)
   %hr{style:"clear:both"}
-  #disqus_thread.body
-  :script
-    var disqus_url = "http://howtonode.org/#{article.name}";
-  %script(src="http://disqus.com/forums/howtonodeorg/embed.js" type="text/javascript")
-  %a(href="http://disqus.com/forums/howtonodeorg/?url=ref")
-    Voir les &eacute;changes.
-  %a.dsq-brlink(href="http://disqus.com")
-    commentaires g&eacute;r&eacute;s par
-    %span.logo-disqus
-      Disqus
-  :script
-    (function() {
-      var links = document.getElementsByTagName('a');
-      var query = '?';
-      for(var i = 0; i < links.length; i++) {
-        if(links[i].href.indexOf('#disqus_thread') >= 0) {
-          query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&amp;';
-        }
-      }
-      document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/howtonodeorg/get_num_replies.js' + query + '"></' + 'script>');
-    })();
 
 
 #sidebar
@@ -118,9 +97,7 @@
       %h4
         Autres articles:
       %ul
-        :each related in article.related
+        :each related in article.related.slice(0,10)
           %li
             %a{href: "/" + related.name}&=related.title
-            :if related.node
-              %span.versiontag&= related.node
 
