--- a/skin/article.haml
+++ b/skin/article.haml
@@ -6,8 +6,37 @@
   = markdownEncode(article.markdown)
   %hr{style:"clear:both"}
 
-
+  #disqus_thread
+  :script
+    var disqus_shortname = 'ungeekenorbite';
+    var disqus_url = "http://ungeekenorbite.nodester.com/#{article.name}";
+    var disqus_identifier = '#{article.name}' ;
+  
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+  
+  %noscript
+    Please enable JavaScript to view the 
+    %a(href="http://disqus.com/?ref_noscript")
+      comments powered by Disqus.
+  %a.dsq-brlink(href="http://disqus.com")
+    blog comments powered by 
+    %span.logo-disqus
+      Disqus
+    
 #sidebar
+  #share
+    #twitter
+      %a{href:"http://twitter.com/share", class:"twitter-share-button", data-count:"vertical", data-via:"PuerkitoBio", data-lang:"fr"}Tweet
+      %script{type:"text/javascript", src:"http://platform.twitter.com/widgets.js"}
+    #linkedin
+      %script{src:"http://platform.linkedin.com/in.js", type:"text/javascript"}
+      %script{type:"IN/Share", data-counter:"top"}
+    #facebook
+      %iframe{src:"http://www.facebook.com/plugins/like.php?href&amp;layout=box_count&amp;show_faces=false&amp;width=58&amp;action=like&amp;font&amp;colorscheme=light&amp;height=65", scrolling:"no", frameborder:"0", style:"border:none; overflow:hidden; width:58px; height:65px;", allowTransparency:"true"}
   .auteur
     %h4 ="&Aacute; propos de " + author.name
     %img{src: "/" + author.avatar, title: author.name }
