--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -7,17 +7,20 @@
     %title #{(title ? title + " - " : "") + "Un geek en orbite"}
     %link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/feed.xml")
     %link(href="/favicon.ico" rel="icon" type="image/x-icon")
-    %link(rel="stylesheet" href="/layout.css" media="all, only screen and (min-width: 601px)")
+    %link(rel="stylesheet" href="/layout.css")
     %link(rel="stylesheet" href="/mobile.css" media="only screen and (max-width: 600px), handheld")
     %script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js")
     %script(src="jquery.mediaqueries.js")
     %script(src="jquery.tpl_layout1.1.6.min.js")
     %script
       $.templateLayoutShowOnReady();
- 
+       
       $(function() {
-        $.setTemplateLayout('layout.css');
-        });
+        if ($(window).width() > 600)
+          $.setTemplateLayout('layout.css');
+        else
+          $.setTemplateLayout('mobile.css');
+      });  
   %body
     #header
       %a{href: "/"}
